--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
                 </ul>
             </nav>
                 <ul class="auth-nav items-nav">
-                    <li class="items"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="items"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="items">
+                        <svg  class = "icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope"></use>                          
+                        </svg>
+                        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="items">
+                        <svg  class = "icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>                          </use>
+                        </svg>
+                        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
                 </ul>
         </div>
     </header>
@@ -38,18 +47,38 @@
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="work">
                     <li class="work-item">
+                        <div class="featur">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-antenna">
+                            </svg>
+                        </div>
                         <h3 class="title">Увага до деталей</h3>
                         <p class="work-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="work-item">
+                        <div class="featur">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-clock">
+                            </svg>
+                        </div>
                         <h3 class="title">Пунктуальність</h3>
                         <p class="work-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="work-item">
+                        <div class="featur">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-diagram">
+                            </svg>
+                        </div>
                         <h3 class="title">Планування</h3>
                         <p class="work-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="work-item">
+                        <div class="featur">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-astronaut">
+                            </svg>
+                        </div>
                         <h3 class="title">Сучасні технології</h3>
                         <p class="work-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
@@ -75,58 +104,284 @@
         <section class="section-img">
             <div class="container">
                 <h2 class="subject">Наша команда</h2>
-            <ul class="img">
-                <li class="img-item">
-                    <img src="./images/img.jpg" alt="Фото Ігоря Дем'яненко" width="270">
-                    <div class="name-desc">
-                        <h3 class="name">Ігор Дем'яненко</h3>
-                        <p class="desc" lang="en">Product Designer</p>
-                    </div>
-                    
-                </li>
-                <li class="img-item">
-                    <img src="./images/img1.jpg" alt="Фото Ольги Рєпіної" width="270">
-                    <div class="name-desc">
-                        <h3 class="name">Ольга Рєпіна</h3>
-                        <p class="desc" lang="en">Frontend Developer</p>
-                    </div> 
-                </li>
-                <li class="img-item">
-                    <img src="./images/img2.jpg" alt="Фото Миколи Тарасова" width="270">
-                    <div class="name-desc">
-                        <h3 class="name">Микола Тарасов</h3>
-                        <p class="desc" lang="en">Marketing</p>
-                    </div>
-                </li>
-                <li class="img-item">
-                    <img src="./images/img3.jpg" alt="Фото Михайла Єрмакова" width="270">
-                    <div class="name-desc">
-                        <h3 class="name">Михайло Єрмаков</h3>
-                        <p class="desc" lang="en">UI Designer</p>
-                    </div>
-                </li>
-            </ul>
+                <ul class="img">
+                    <li class="img-item">
+                        <img src="./images/img.jpg" alt="Фото Ігоря Дем'яненко" width="270">
+                        <div class="name-desc">
+                            <h3 class="name">Ігор Дем'яненко</h3>
+                            <p class="desc" lang="en">Product Designer</p>
+                        </div>
+                        <div>
+                            <ul class="social">
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter">
+                                        </svg>
+                                    </a>    
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin">
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="img-item">
+                        <img src="./images/img1.jpg" alt="Фото Ольги Рєпіної" width="270">
+                        <div class="name-desc">
+                            <h3 class="name">Ольга Рєпіна</h3>
+                            <p class="desc" lang="en">Frontend Developer</p>
+                        </div>
+                        <div>
+                            <ul class="social">
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter">
+                                        </svg>
+                                    </a>    
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin">
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div> 
+                    </li>
+                    <li class="img-item">
+                        <img src="./images/img2.jpg" alt="Фото Миколи Тарасова" width="270">
+                        <div class="name-desc">
+                            <h3 class="name">Микола Тарасов</h3>
+                            <p class="desc" lang="en">Marketing</p>
+                        </div>
+                        <div>
+                            <ul class="social">
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter">
+                                        </svg>
+                                    </a>    
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin">
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="img-item">
+                        <img src="./images/img3.jpg" alt="Фото Михайла Єрмакова" width="270">
+                        <div class="name-desc">
+                            <h3 class="name">Михайло Єрмаков</h3>
+                            <p class="desc" lang="en">UI Designer</p>
+                        </div>
+                        <div>
+                            <ul class="social">
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter">
+                                        </svg>
+                                    </a>    
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook">
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-nav" href="#">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin">
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="subject">Постійні клієнти</h2>
+                <ul class="clients-list">
+                    <li>
+                        <a>
+                            <div class="clients">
+                                <svg width="106" height="60">
+                                    <use href="./images/icons.svg#icon-yaco">
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <div class="clients">
+                                <svg width="106" height="60">
+                                    <use href="./images/icons.svg#icon-here">
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <div class="clients">
+                                <svg width="106" height="60">
+                                    <use href="./images/icons.svg#icon-company">
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <div class="clients">
+                                <svg width="106" height="60">
+                                    <use href="./images/icons.svg#icon-foster">
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <div class="clients">
+                                <svg width="106" height="60">
+                                    <use href="./images/icons.svg#icon-brand">
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <div class="clients">
+                                <svg width="106" height="60">
+                                    <use href="./images/icons.svg#icon-line">
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
     <footer class="bottom"> 
         <div class="container"> 
-            <a class="logo-type one" href="/"><span class="logo">Web</span>Studio</a> 
-            <address> 
-                <ul> 
-                    <li class="basement"> 
-                        <a class="list" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" 
-                        rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a> 
-                    </li> 
-                    <li class="basement"> 
-                        <a class="list item" href="mailto:info@devstudio.com">info@devstudio.com</a> 
-                    </li> 
-                    <li class="basement"> 
-                        <a class="list item" href="tel:+380961111111">+38 096 111 11 11</a> 
-                    </li> 
-                </ul> 
-            </address> 
+            <div class="footer">
+                <div>
+                    <a class="logo-type one" href="/"><span class="logo">Web</span>Studio</a> 
+                    <address> 
+                        <ul> 
+                            <li class="basement"> 
+                                <a class="list" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" 
+                                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a> 
+                            </li> 
+                            <li class="basement"> 
+                                <a class="list item" href="mailto:info@devstudio.com">info@devstudio.com</a> 
+                            </li> 
+                            <li class="basement"> 
+                                <a class="list item" href="tel:+380961111111">+38 096 111 11 11</a> 
+                            </li> 
+                        </ul> 
+                    </address> 
+                </div>
+                <div>
+                    <p class="foot-text">приєднуйтесь</p>
+                    <ul class="social">
+                        <li>
+                            <a class="foot-social" href="#">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram">
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="foot-social" href="#">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter">
+                                </svg>
+                            </a>    
+                        </li>
+                        <li>
+                            <a class="foot-social" href="#">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook">
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="foot-social" href="#">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin">
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            
         </div> 
-    </footer>
+    </footer>  
 </body>
 </html>
