внесено зміни в svg

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <li class="items">
                         <a class="link" href="tel:+380961111111">
                             <svg  class = "icon" width="10" height="16">
-                                <use href="./images/icons.svg#icon-smartphone"></use>                          </use>
+                                <use href="./images/icons.svg#icon-smartphone">
+                                </use>                          
                             </svg>
                             +38 096 111 11 11
                         </a>
@@ -275,42 +276,42 @@
                     <li class="client-item">
                         <a href="#" class="clients">
                             <svg width="106" height="60">
-                                <use href="./images/icons.svg#icon-yaco">
+                                <use href="./images/icons.svg#icon-yaco"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="clients">
                             <svg width="106" height="60">
-                                <use href="./images/icons.svg#icon-here">
+                                <use href="./images/icons.svg#icon-here"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="clients">
                             <svg width="106" height="60">
-                                <use href="./images/icons.svg#icon-company">
+                                <use href="./images/icons.svg#icon-company"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="clients">
                             <svg width="106" height="60">
-                                <use href="./images/icons.svg#icon-foster">
+                                <use href="./images/icons.svg#icon-foster"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="clients">
                             <svg width="106" height="60">
-                                <use href="./images/icons.svg#icon-brand">
+                                <use href="./images/icons.svg#icon-brand"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="clients">
                             <svg width="106" height="60">
-                                <use href="./images/icons.svg#icon-line">
+                                <use href="./images/icons.svg#icon-line"></use>
                             </svg>
                         </a>
                     </li>
