--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                 <li class="items">
                     <a class="link" href="tel:+380961111111">
                         <svg  class = "icon" width="10" height="16">
-                            <use href="./images/icons.svg#icon-smartphone"></use>                          </use>
+                            <use href="./images/icons.svg#icon-smartphone"></use>                         
                         </svg>
                         +38 096 111 11 11
                     </a>
